CREATE TABLE Usuario (
    cpf VARCHAR(11) NOT NULL PRIMARY KEY,
    nome VARCHAR(100) NOT NULL,
    senha VARCHAR(50) NOT NULL,
    email VARCHAR(100) NOT NULL,
    telefone VARCHAR(11) NOT NULL
);

CREATE TABLE Funcionario (
    idAdm Serial PRIMARY KEY,
    cpf VARCHAR(11) NOT NULL,
    FOREIGN KEY (cpf) REFERENCES Usuario(cpf)
);

CREATE TABLE Jogo (
    idJogo Serial PRIMARY KEY,
    Nome VARCHAR(100) NOT NULL,
    Genero VARCHAR(100) NOT NULL,
    Descricao VARCHAR(255) NOT NULL,
    Valor FLOAT NOT NULL,
    Desenvolvedora VARCHAR(100) NOT NULL,
    QuantConquistas int NOT NULL,
    DescontoElegivel int NOT NULL
);

CREATE TABLE JogoUsuario (
    cpfUsuario VARCHAR(11) NOT NULL,
    idJogo int NOT NULL,
    QuantObtidaConquistas int DEFAULT 0,
    TemCupom int DEFAULT 1,
    FOREIGN KEY (idJogo) REFERENCES Jogo(idJogo),
    FOREIGN KEY (cpfUsuario) REFERENCES Usuario(cpf)
);

CREATE TABLE Cupom (
    idCupom Serial PRIMARY KEY,
    cpf VARCHAR(11) NOT NULL,
    Desconto int NOT NULL,
    FOREIGN KEY (cpf) REFERENCES Usuario(cpf)
);


-- Vou fazer aqui em baixo os Drops das Tabelas, pra quando a gente quiser limpar o banco

DROP TABLE Funcionario;
DROP TABLE JogoUsuario;
DROP TABLE Cupom;
DROP TABLE Jogo;
DROP TABLE Usuario;

-- Para popular o banco

INSERT INTO Usuario (cpf, nome, senha, email, telefone) VALUES 
('admin', 'admin', 'admin', 'admin@admin.com', 'admin');

INSERT INTO Funcionario (cpf) VALUES ('admin');

INSERT INTO Jogo (Nome, Genero, Descricao, Valor, Desenvolvedora, QuantConquistas, DescontoElegivel) VALUES
('Assassin''s Creed: Valhalla', 'Ação e Aventura', 'Explore a Idade Média como um viking e enfrente desafios épicos.', 59.99, 'Ubisoft', 50, 15),
('The Last of Us Part II', 'Drama', 'A continuação do aclamado jogo de sobrevivência, com uma história envolvente.', 69.99, 'Naughty Dog', 65, 25),
('Cyberpunk 2077', 'RPG', 'Entre em Night City, um mundo aberto repleto de oportunidades e perigos.', 49.99, 'CD Projekt Red', 40, 10),
('Resident Evil Village', 'Terror', 'Enfrente horrores sobrenaturais em uma misteriosa vila.', 54.99, 'Capcom', 55, 20),
('FIFA 22', 'Esporte', 'Experimente o realismo do futebol com gráficos e jogabilidade aprimorados.', 69.99, 'EA Sports', 70, 30),
('Grand Theft Auto V', 'Ação', 'Explore uma cidade aberta repleta de atividades e missões.', 29.99, 'Rockstar Games', 75, 20),
('The Legend of Zelda: Breath of the Wild', 'Ação e Aventura', 'Descubra um vasto mundo cheio de mistérios e aventuras.', 59.99, 'Nintendo', 65, 15),
('Dark Souls III', 'RPG', 'Enfrente desafios intensos e criaturas monstruosas neste RPG de ação.', 39.99, 'FromSoftware', 60, 10),
('Call of Duty: Warzone', 'FPS', 'Entre em intensas batalhas online neste jogo de tiro gratuito.', 0.00, 'Activision', 50, 25),
('Among Us', 'Multiplayer', 'Descubra quem é o impostor neste jogo de dedução e traição.', 4.99, 'Innersloth', 30, 5),
('Super Smash Bros. Ultimate', 'Luta', 'Reúna seus personagens favoritos e lute em arenas épicas.', 59.99, 'Nintendo', 50, 20),
('Portal 2', 'Puzzle', 'Resolva quebra-cabeças desafiadores usando o portal gun.', 19.99, 'Valve', 45, 10),
('Red Dead Redemption 2', 'Ação e Aventura', 'Explore o Velho Oeste e viva uma história épica de foras da lei.', 39.99, 'Rockstar Games', 70, 15),
('Minecraft', 'Sobrevivência', 'Construa e explore um mundo infinito de blocos.', 26.99, 'Mojang Studios', 60, 25),
('Uncharted 4: A Thief''s End', 'Ação e Aventura', 'Siga Nathan Drake em sua última aventura em busca de tesouros.', 19.99, 'Naughty Dog', 55, 20),
('The Witcher 3: Wild Hunt', 'RPG', 'Embarque em uma jornada épica em busca da filha do protagonista.', 29.99, 'CD Projekt Red', 65, 10),
('Batman: Arkham Knight', 'Ação', 'Assuma o papel do Cavaleiro das Trevas e proteja Gotham City.', 19.99, 'Rocksteady Studios', 50, 15),
('Hades', 'RPG', 'Escape do submundo enfrentando deuses e criaturas mitológicas.', 24.99, 'Supergiant Games', 40, 20),
('Final Fantasy VII Remake', 'RPG', 'Reviva a épica jornada de Cloud Strife em Midgar.', 59.99, 'Square Enix', 70, 30),
('Overwatch', 'FPS', 'Junte-se a um time de heróis e lute pelo futuro em partidas frenéticas.', 19.99, 'Blizzard Entertainment', 45, 10),
('Horizon Zero Dawn', 'Ação e Aventura', 'Explore um mundo pós-apocalíptico dominado por máquinas selvagens.', 49.99, 'Guerrilla Games', 55, 20),
('Persona 5', 'RPG', 'Assuma o papel de um estudante do ensino médio com poderes sobrenaturais.', 39.99, 'Atlus', 50, 15),
('BioShock Infinite', 'FPS', 'Viaje para uma cidade flutuante cheia de mistérios e ideologias extremas.', 29.99, 'Irrational Games', 60, 25),
('Dead by Daylight', 'Horror', 'Sobreviva como um sobrevivente ou persiga como um assassino neste jogo de terror multijogador.', 19.99, 'Behaviour Interactive', 40, 10),
('Civilization VI', 'Estratégia', 'Construa e desenvolva uma civilização desde os primórdios até a era moderna.', 59.99, 'Firaxis Games', 70, 30),
('God of War', 'Ação', 'Acompanhe Kratos em uma jornada épica repleta de ação e mitologia.', 39.99, 'Santa Monica Studio', 65, 15),
('Stardew Valley', 'Simulação', 'Abandone a vida na cidade e restaure uma fazenda em uma cidade rural.', 14.99, 'ConcernedApe', 50, 20),
('Subnautica', 'Sobrevivência', 'Explore um mundo subaquático alienígena cheio de criaturas estranhas.', 24.99, 'Unknown Worlds Entertainment', 55, 25),
('League of Legends', 'MOBA', 'Participe de batalhas intensas em equipe neste popular jogo multiplayer online.', 0.00, 'Riot Games', 70, 30),
('Borderlands 3', 'Ação e Aventura', 'Enfrente inimigos em um mundo de caos e comédia em busca de tesouros.', 59.99, 'Gearbox Software', 65, 20),
('Sekiro: Shadows Die Twice', 'Ação', 'Domine a arte da espada em um Japão feudal cheio de desafios.', 49.99, 'FromSoftware', 60, 25),
('Monster Hunter: World', 'Ação', 'Caçe monstros gigantes em um vasto mundo aberto cheio de vida selvagem.', 39.99, 'Capcom', 55, 20),
('No Man''s Sky', 'Exploração', 'Explore uma galáxia gerada proceduralmente, descobrindo novos planetas e criaturas.', 29.99, 'Hello Games', 45, 10),
('Civilization V', 'Estratégia', 'Construa um império desde os primórdios até a era moderna neste clássico jogo de estratégia.', 29.99, 'Firaxis Games', 50, 15),
('Mortal Kombat 11', 'Luta', 'Participe de brutais combates de luta com os icônicos personagens da série.', 49.99, 'NetherRealm Studios', 55, 20),
('Hollow Knight', 'Plataforma', 'Explore um mundo subterrâneo repleto de segredos e desafios.', 14.99, 'Team Cherry', 40, 10),
('Tom Clancy''s Rainbow Six Siege', 'FPS', 'Participe de confrontos táticos em equipes neste jogo de tiro em primeira pessoa.', 19.99, 'Ubisoft', 60, 25),
('Divinity: Original Sin 2', 'RPG', 'Explore um vasto mundo de fantasia com liberdade para tomar decisões e moldar o destino.', 44.99, 'Larian Studios', 70, 30),
('Cuphead', 'Plataforma', 'Desafie chefes difíceis em um jogo de plataforma com visual inspirado em desenhos animados dos anos 1930.', 19.99, 'Studio MDHR', 45, 15),
('Rainbow Six: Vegas 2', 'FPS', 'Siga os agentes da Rainbow Six em missões de combate tático em Las Vegas.', 9.99, 'Ubisoft', 30, 5),
('The Elder Scrolls V: Skyrim', 'RPG', 'Explore uma vasta terra de fantasia repleta de dragões e aventuras.', 39.99, 'Bethesda Game Studios', 70, 25),
('Counter-Strike: Global Offensive', 'FPS', 'Participe de intensos combates táticos em equipe neste clássico jogo de tiro.', 0.00, 'Valve', 75, 30),
('Death Stranding', 'Ação', 'Entregue carga em um mundo pós-apocalíptico enquanto enfrenta ameaças sobrenaturais.', 49.99, 'Kojima Productions', 55, 20),
('Doom Eternal', 'FPS', 'Despache demônios com brutalidade neste jogo de tiro em primeira pessoa.', 59.99, 'id Software', 60, 25),
('Fire Emblem: Three Houses', 'RPG', 'Assuma o papel de um professor e guie seus alunos em batalhas estratégicas.', 59.99, 'Intelligent Systems', 65, 20),
('Rainbow Six: Siege', 'FPS', 'Enfrente confrontos táticos intensos em equipes neste jogo de tiro em primeira pessoa.', 19.99, 'Ubisoft', 60, 15),
('Star Wars Jedi: Fallen Order', 'Ação e Aventura', 'Descubra a história de um jovem Jedi em fuga em um mundo dominado pelo Império.', 59.99, 'Respawn Entertainment', 50, 20),
('The Sims 4', 'Simulação', 'Crie e controle a vida de seus Sims em um mundo cheio de possibilidades.', 39.99, 'Maxis', 65, 25),
('Warframe', 'Ação', 'Assuma o papel de um Tenno e lute contra as forças do mal neste jogo de tiro cooperativo.', 0.00, 'Digital Extremes', 70, 30),
('World of Warcraft', 'MMORPG', 'Explore um vasto mundo de fantasia e participe de aventuras épicas com outros jogadores.', 14.99, 'Blizzard Entertainment', 75, 30),
('Genshin Impact', 'RPG', 'Descubra um mundo de fantasia aberto e repleto de segredos e batalhas.', 0.00, 'miHoYo', 70, 30),
('Farming Simulator 19', 'Simulação', 'Gerencie sua própria fazenda, cultive plantações e crie animais.', 34.99, 'GIANTS Software', 45, 10),
('Rocket League', 'Esporte', 'Participe de partidas de futebol com carros em uma mistura única de esporte e corrida.', 0.00, 'Psyonix', 55, 15),
('Terraria', 'Ação e Aventura', 'Explore e construa em um vasto mundo cheio de perigos e tesouros.', 9.99, 'Re-Logic', 50, 10),
('War Thunder', 'Simulação', 'Pilote uma variedade de veículos de guerra em batalhas épicas multiplayer.', 0.00, 'Gaijin Entertainment', 60, 25),
('Fortnite', 'Battle Royale', 'Participe de batalhas intensas e construa estruturas para sobreviver e vencer.', 0.00, 'Epic Games', 75, 30),
('Rust', 'Sobrevivência', 'Lute pela sobrevivência em um mundo aberto hostil, enfrentando outros jogadores e ameaças naturais.', 34.99, 'Facepunch Studios', 55, 20),
('Cities: Skylines', 'Simulação', 'Construa e gerencie sua própria cidade, enfrentando desafios urbanos.', 29.99, 'Colossal Order', 60, 25),
('Gears 5', 'Ação', 'Junte-se a um esquadrão de soldados para enfrentar uma ameaça alienígena em um mundo distópico.', 39.99, 'The Coalition', 65, 15),
('Rainbow Six: Quarantine', 'FPS', 'Enfrente ameaças alienígenas em uma experiência cooperativa tática.', 59.99, 'Ubisoft', 55, 20),
('Half-Life: Alyx', 'Ação', 'Viva uma aventura imersiva em realidade virtual neste jogo da franquia Half-Life.', 59.99, 'Valve', 45, 15),
('Assassin''s Creed Odyssey', 'Ação e Aventura', 'Viaje para a Grécia Antiga e viva uma odisseia épica.', 49.99, 'Ubisoft', 60, 25),
('League of Legends: Wild Rift', 'MOBA', 'Experimente League of Legends otimizado para dispositivos móveis e consoles.', 0.00, 'Riot Games', 50, 20),
('Slay the Spire', 'Roguelike', 'Construa seu baralho e enfrente desafios em um mundo em constante mudança.', 24.99, 'MegaCrit', 40, 10),
('Ori and the Will of the Wisps', 'Plataforma', 'Explore um mundo deslumbrante e repleto de desafios em busca de seu destino.', 29.99, 'Moon Studios', 55, 20),
('Frostpunk', 'Estratégia', 'Administre uma sociedade em um mundo congelado, enfrentando dilemas éticos e desafios climáticos.', 29.99, '11 bit studios', 50, 15),
('Celeste', 'Plataforma', 'Supere desafios mortais em uma montanha misteriosa neste jogo de plataforma indie.', 19.99, 'Maddy Makes Games', 45, 10),
('Nioh 2', 'Ação', 'Domine a arte da espada samurai e enfrente criaturas sobrenaturais no Japão feudal.', 49.99, 'Team Ninja', 60, 25),
('Darkest Dungeon', 'RPG', 'Monte uma equipe e explore masmorras repletas de horrores e desafios.', 24.99, 'Red Hook Studios', 55, 20),
('The Forest', 'Sobrevivência', 'Sobreviva em uma floresta assombrada por criaturas hostis enquanto busca por respostas.', 19.99, 'Endnight Games', 40, 10),
('Risk of Rain 2', 'Roguelike', 'Enfrente hordas de inimigos em um mundo em constante mudança, buscando poder e sobrevivência.', 24.99, 'Hopoo Games', 45, 15),
('Factorio', 'Estratégia', 'Construa e gerencie uma fábrica automatizada em um mundo alienígena.', 29.99, 'Wube Software', 50, 20),
('Hades', 'RPG', 'Escape do submundo enfrentando deuses e criaturas mitológicas.', 24.99, 'Supergiant Games', 40, 5),
('Crusader Kings III', 'Estratégia', 'Construa e gerencie seu próprio reino, lidando com intrigas e ambições políticas.', 49.99, 'Paradox Interactive', 60, 15),
('Subnautica: Below Zero', 'Sobrevivência', 'Explore um mundo subaquático gelado cheio de mistérios e perigos.', 29.99, 'Unknown Worlds Entertainment', 55, 25),
('Stellaris', 'Estratégia', 'Construa um império interestelar e domine o universo em um jogo de estratégia espacial.', 39.99, 'Paradox Interactive', 70, 30),
('Dying Light', 'Ação e Aventura', 'Sobreviva a um apocalipse zumbi em um mundo aberto repleto de perigos.', 29.99, 'Techland', 55, 20),
('Civilization VI: Gathering Storm', 'Estratégia', 'Enfrente desafios climáticos e geológicos enquanto expande seu império.', 39.99, 'Firaxis Games', 65, 25),
('Inside', 'Aventura', 'Explore um mundo sombrio e misterioso repleto de perigos e enigmas.', 19.99, 'Playdead', 40, 10),
('Outer Wilds', 'Aventura', 'Descubra os segredos de um sistema solar em constante loop temporal.', 24.99, 'Mobius Digital', 45, 15),
('Fallout 4', 'RPG', 'Explore um mundo pós-apocalíptico devastado pela guerra nuclear.', 29.99, 'Bethesda Game Studios', 60, 20),
('The Walking Dead: The Telltale Definitive Series', 'Drama', 'Reviva a emocionante saga de Clementine em meio ao apocalipse zumbi.', 39.99, 'Telltale Games', 55, 15),
('Mortal Kombat X', 'Luta', 'Participe de batalhas brutais com os icônicos personagens da série.', 19.99, 'NetherRealm Studios', 50, 25),
('Far Cry 5', 'Ação', 'Enfrente uma seita fanática que tomou controle de uma região rural dos Estados Unidos.', 49.99, 'Ubisoft', 65, 10),
('Horizon Zero Dawn: Complete Edition', 'Ação e Aventura', 'Explore um mundo pós-apocalíptico dominado por máquinas selvagens.', 59.99, 'Guerrilla Games', 70, 15),
('Bioshock', 'FPS', 'Explore a cidade subaquática de Rapture e descubra seus segredos sombrios.', 19.99, '2K Games', 45, 5),
('Tomb Raider', 'Ação e Aventura', 'Acompanhe a jornada de Lara Croft em busca de tesouros e respostas.', 29.99, 'Crystal Dynamics', 50, 20),
('Uncharted: The Lost Legacy', 'Ação e Aventura', 'Siga Chloe Frazer e Nadine Ross em uma busca por um antigo tesouro.', 39.99, 'Naughty Dog', 55, 25),
('The Last Guardian', 'Aventura', 'Faça amizade com uma criatura mística enquanto busca escapar de ruínas antigas.', 19.99, 'GenDesign', 40, 10),
('Dishonored', 'Ação', 'Assuma o papel de um assassino sobrenatural em uma cidade distópica.', 29.99, 'Arkane Studios', 60, 20),
('The Elder Scrolls IV: Oblivion', 'RPG', 'Explore uma terra de fantasia épica repleta de aventuras e perigos.', 14.99, 'Bethesda Game Studios', 45, 15),
('Half-Life 2', 'FPS', 'Enfrente alienígenas e soldados em uma revolução contra uma força opressora.', 9.99, 'Valve', 30, 5),
('Portal', 'Puzzle', 'Resolva desafios usando o portal gun em um laboratório de testes sinistro.', 9.99, 'Valve', 35, 10),
('Street Fighter V', 'Luta', 'Lute contra oponentes do mundo todo em combates de artes marciais.', 19.99, 'Capcom', 55, 25),
('Dark Souls', 'RPG', 'Enfrente desafios brutais e descubra os segredos de Lordran.', 19.99, 'FromSoftware', 65, 20),
('Resident Evil 2', 'Terror', 'Sobreviva ao apocalipse zumbi em Raccoon City neste remake do clássico.', 39.99, 'Capcom', 70, 15),
('Rainbow Six: Vegas', 'FPS', 'Siga os agentes da Rainbow Six em missões táticas na cidade do pecado.', 14.99, 'Ubisoft', 50, 10),
('The Witcher 2: Assassins of Kings', 'RPG', 'Acompanhe Geralt em uma trama de intriga e conspiração em seu caminho para a redenção.', 19.99, 'CD Projekt Red', 55, 25),
('Borderlands 2', 'Ação e Aventura', 'Enfrente inimigos em um mundo de caos e comédia em busca de tesouros.', 29.99, 'Gearbox Software', 60, 20),
('Super Mario Odyssey', 'Ação e Aventura', 'Aventure-se por diversos reinos em busca de Power Moons para salvar a Princesa Peach.', 59.99, 'Nintendo', 75, 30),
('Amnesia: The Dark Descent', 'Terror', 'Explore um castelo sinistro enquanto tenta escapar de forças sombrias.', 19.99, 'Frictional Games', 45, 20),
('Silent Hill 2', 'Terror', 'Desvende os mistérios perturbadores de Silent Hill enquanto enfrenta seus demônios internos.', 29.99, 'Konami', 50, 15),
('Outlast', 'Terror', 'Investigue uma instituição mental abandonada e descubra seus horríveis segredos.', 19.99, 'Red Barrels', 55, 25),
('Until Dawn', 'Terror', 'Tome decisões que afetam o destino dos personagens enquanto tenta sobreviver a uma noite terrível.', 29.99, 'Supermassive Games', 60, 10),
('Dead Space', 'Terror', 'Enfrente horrores alienígenas em uma nave espacial abandonada.', 19.99, 'Visceral Games', 65, 20),
('Resident Evil 7: Biohazard', 'Terror', 'Explore uma casa assombrada em busca de sua esposa desaparecida.', 29.99, 'Capcom', 70, 5),
('Layers of Fear', 'Terror', 'Mergulhe na mente de um pintor perturbado enquanto ele enfrenta seus medos mais profundos.', 14.99, 'Bloober Team', 40, 10),
('Soma', 'Terror', 'Descubra segredos sombrios em uma estação de pesquisa subaquática.', 24.99, 'Frictional Games', 45, 15),
('The Evil Within', 'Terror', 'Sobreviva a pesadelos distorcidos enquanto investiga um mundo de horror.', 19.99, 'Tango Gameworks', 50, 20),
('Alien: Isolation', 'Terror', 'Fuja de um xenomorfo implacável a bordo de uma estação espacial abandonada.', 29.99, 'Creative Assembly', 55, 25),
('Phasmophobia', 'Terror', 'Explore locais assombrados com amigos enquanto investiga atividades paranormais.', 19.99, 'Kinetic Games', 60, 10),
('Little Nightmares', 'Terror', 'Escape de criaturas grotescas em um mundo sombrio e surreal.', 14.99, 'Tarsier Studios', 65, 20),
('Observer', 'Terror', 'Investigue um futuro distópico enquanto enfrenta seus próprios demônios.', 24.99, 'Bloober Team', 70, 5),
('Man of Medan', 'Terror', 'Sobreviva a uma noite aterrorizante a bordo de um navio fantasma.', 19.99, 'Supermassive Games', 45, 15),
('The Medium', 'Terror', 'Explore dois mundos enquanto desvenda segredos sombrios de seu passado.', 29.99, 'Bloober Team', 50, 20),
('Dead by Daylight', 'Terror', 'Sobreviva como um sobrevivente ou persiga como um assassino neste jogo de terror multijogador.', 19.99, 'Behaviour Interactive', 55, 25),
('Visage', 'Terror', 'Explore uma casa assombrada enquanto enfrenta horrores sobrenaturais.', 24.99, 'SadSquare Studio', 60, 10),
('The Forest', 'Terror', 'Sobreviva em uma floresta assombrada por criaturas hostis enquanto busca por respostas.', 19.99, 'Endnight Games', 65, 20),
('Resident Evil 2', 'Terror', 'Sobreviva ao apocalipse zumbi em Raccoon City neste remake do clássico.', 39.99, 'Capcom', 70, 5),
('Amnesia: Rebirth', 'Terror', 'Enfrente seus medos enquanto busca por respostas em um deserto desolado.', 29.99, 'Frictional Games', 45, 15),
('Just Cause 4', 'Ação', 'Cause caos e destruição em um mundo aberto repleto de possibilidades.', 49.99, 'Avalanche Studios', 65, 20),
('Watch Dogs 2', 'Ação', 'Hackeie e lute contra um sistema corrupto em uma versão futurista de São Francisco.', 59.99, 'Ubisoft', 55, 25),
('Metal Gear Solid V: The Phantom Pain', 'Ação', 'Assuma o papel de Big Boss e embarque em missões secretas e intrigantes.', 39.99, 'Kojima Productions', 70, 15),
('Saints Row IV', 'Ação', 'Assuma o papel do presidente dos Estados Unidos em uma batalha contra alienígenas.', 29.99, 'Deep Silver Volition', 60, 20),
('Watch Dogs', 'Ação', 'Use suas habilidades de hacking para derrubar uma conspiração em Chicago.', 19.99, 'Ubisoft', 45, 10),
('Infamous Second Son', 'Ação', 'Desenvolva poderes sobrenaturais e lute contra uma organização governamental.', 49.99, 'Sucker Punch Productions', 55, 20),
('Prototype 2', 'Ação', 'Assuma o papel de um anti-herói com poderes mutantes em busca de vingança.', 39.99, 'Radical Entertainment', 65, 10),
('Mad Max', 'Ação', 'Sobreviva e explore um deserto pós-apocalíptico em busca de vingança.', 19.99, 'Avalanche Studios', 50, 15),
('Crackdown 3', 'Ação', 'Assuma o papel de um superagente em um mundo aberto repleto de caos e destruição.', 29.99, 'Sumo Digital', 60, 25),
('Sunset Overdrive', 'Ação', 'Explore uma cidade colorida e caótica enquanto luta contra monstros mutantes.', 49.99, 'Insomniac Games', 55, 20),
('Middle-earth: Shadow of War', 'Ação', 'Lute contra hordas de inimigos e conquiste fortalezas em Mordor.', 59.99, 'Monolith Productions', 70, 15),
('The Surge 2', 'Ação', 'Explore uma cidade cyberpunk em ruínas e enfrente inimigos biomecânicos.', 39.99, 'Deck13 Interactive', 65, 20),
('Prototype', 'Ação', 'Assuma o controle de um mutante em busca de respostas em um mundo devastado.', 19.99, 'Radical Entertainment', 50, 10),
('Agents of Mayhem', 'Ação', 'Monte sua equipe de superagentes e combata o mal em uma cidade futurista.', 29.99, 'Deep Silver Volition', 60, 25),
('Deus Ex: Mankind Divided', 'Ação', 'Navegue em um mundo cyberpunk repleto de conspirações e intrigas.', 49.99, 'Eidos-Montréal', 55, 20),
('Dying Light 2', 'Ação', 'Explore um mundo aberto pós-apocalíptico e enfrente criaturas mutantes.', 59.99, 'Techland', 70, 15),
('Rage 2', 'Ação', 'Lute contra gangues e mutantes em um mundo aberto pós-apocalíptico.', 39.99, 'Avalanche Studios', 65, 20),
('Watch Dogs: Legion', 'Ação', 'Recrute e controle cidadãos em uma Londres futurista em uma batalha contra a opressão.', 59.99, 'Ubisoft', 70, 15),
('Prototype: Biohazard Bundle', 'Ação', 'Experimente os dois jogos da série Prototype em um único pacote.', 49.99, 'Activision', 60, 25),
('Saints Row: The Third Remastered', 'Ação', 'Reviva as aventuras insanas dos Saints nesta remasterização do clássico.', 39.99, 'Deep Silver Volition', 55, 20),
('Assassin''s Creed Origins', 'Ação e Aventura', 'Explore o Antigo Egito e descubra os segredos por trás da criação da Irmandade dos Assassinos.', 59.99, 'Ubisoft', 70, 15),
('Red Dead Redemption', 'Ação e Aventura', 'Viva como um fora da lei no Velho Oeste enquanto busca por vingança e redenção.', 29.99, 'Rockstar Games', 65, 20),
('The Elder Scrolls III: Morrowind', 'RPG', 'Explore a vasta província de Morrowind e descubra sua história rica e cultura única.', 14.99, 'Bethesda Game Studios', 50, 10),
('Fallout: New Vegas', 'RPG', 'Navegue pelas terras devastadas do deserto de Nevada enquanto busca poder e vingança.', 19.99, 'Obsidian Entertainment', 55, 15),
('Mass Effect 2', 'RPG', 'Assuma o papel do Comandante Shepard e lidere uma equipe diversificada em uma missão para salvar a galáxia.', 29.99, 'BioWare', 60, 20),
('The Legend of Zelda: Ocarina of Time', 'Ação e Aventura', 'Embarque em uma jornada épica para salvar o reino de Hyrule da ameaça de Ganondorf.', 19.99, 'Nintendo', 65, 25),
('Super Mario 64', 'Ação e Aventura', 'Explore o castelo da Princesa Peach e recupere as Estrelas de Poder roubadas por Bowser.', 14.99, 'Nintendo', 60, 20),
('Half-Life', 'FPS', 'Lute contra invasores alienígenas e criaturas mutantes em uma instalação de pesquisa secreta.', 9.99, 'Valve', 55, 15),
('Chrono Trigger', 'RPG', 'Viaje pelo tempo e impeça uma ameaça que pode destruir o mundo em diferentes eras.', 19.99, 'Square Enix', 50, 10),
('Metal Gear Solid', 'Ação e Aventura', 'Assuma o papel de Solid Snake e infiltre-se em uma base militar para impedir um ataque nuclear.', 19.99, 'Konami', 55, 20),
('Final Fantasy VI', 'RPG', 'Junte-se a um grupo de rebeldes em uma jornada para derrubar um império opressor e salvar o mundo.', 14.99, 'Square Enix', 60, 25),
('Super Metroid', 'Ação e Aventura', 'Explore um planeta alienígena cheio de segredos e perigos em busca da criatura Metroid.', 19.99, 'Nintendo', 65, 15),
('Portal 2', 'Puzzle', 'Resolva quebra-cabeças desafiadores usando o portal gun.', 19.99, 'Valve', 70, 20),
('BioShock', 'FPS', 'Descubra os segredos de Rapture, uma cidade subaquática utópica que se transformou em pesadelo.', 19.99, '2K Games', 75, 25),
('The Legend of Zelda: Majora''s Mask', 'Ação e Aventura', 'Detenha a lua de cair sobre o mundo em apenas três dias em uma corrida contra o tempo.', 29.99, 'Nintendo', 70, 15),
('Super Mario World', 'Plataforma', 'Aventure-se pelo Mushroom Kingdom para resgatar a Princesa Peach das garras de Bowser.', 19.99, 'Nintendo', 65, 20),
('Donkey Kong Country', 'Plataforma', 'Ajude Donkey Kong e Diddy Kong a recuperar seu tesouro roubado de King K. Rool.', 14.99, 'Nintendo', 60, 25),
('Metroid Prime', 'Ação e Aventura', 'Explore o planeta alienígena Tallon IV em uma aventura em primeira pessoa como a caçadora de recompensas Samus Aran.', 19.99, 'Nintendo', 55, 20),
('The Elder Scrolls IV: Oblivion', 'RPG', 'Explore uma terra de fantasia épica repleta de aventuras e perigos.', 14.99, 'Bethesda Game Studios', 50, 15),
('Half-Life 2: Episode Two', 'FPS', 'Continue a saga de Gordon Freeman enquanto luta contra as forças da Combine em uma batalha desesperada pela sobrevivência da humanidade.', 9.99, 'Valve', 45, 10);