package Controllers;

public class ControleJogo {
    // Precisa ser implementado
}
