package Controllers;

public class ControleJogoUsuario {
    // Precisa ser implementado
}
